# analyse_financiere

./: .gitignore  README.md  pyproject.toml
notebooks/: analyse_financiere.ipynb  prix_etf.csv
src/analyse_portefeuille/: 00_contexte_selection.md  Liste ETF.xlsx  Liste_ETF.csv  main.py
